<resources>
    <!-- Start Activity -->
    <string name="app_name">Recipe App</string>
    <string name="textViewHi">Hi</string>
    <string name="textViewCook">What do you want to cook today ?</string>
    <string name="searchBar">Search Recipes</string>
    <string name="favouriteRecipe">My Favourite Recipe</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="seeMore">See all Recipes></string>
    <string name="home_button">Home Button</string>
    <string name="favourite_button">Favourite Button</string>
    <string name="profile_button">Profile Button</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="italian">Italian</string>
    <string name="salad">Salad</string>
    <string name="soup">Soup</string>
    <string name="indian">Indian</string>
    <string name="chinese">Chinese</string>
    <string name="thai">Thai</string>
    <string name="category">Categories</string>

    <!-- Main Activity -->
    <string name="enjoy_cooking">Enjoy \nCooking</string>
    <string name="get_started">Get Started</string>
    <string name="meal">Delicious meal on your phone</string>
    <string name="match_n_recipe">Match \n Recipe</string>

    <!-- List Activity -->
    <string name="looking_for">\ Looking for %s,</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>

    <!-- Detail Activity -->
    <string name="add_button">Add</string>
    <string name="recipe_name">Recipe Name</string>
    <string name="meal_type">Meal Type</string>
    <string name="mealType">Breakfast, Lunch or Dinner</string>
    <string name="cooking_time">Cooking Time (In min)</string>
    <string name="servings">Servings</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="show_my_recipe">Show My Recipe</string>
    <string name="calories">Calories</string>
    <string name="delete_button">Delete</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="my_profile">MY Profile</string>
    <string name="show_vegetarian_food">Show Vegetarian Food</string>
    <string name="delete_favourite_recipe">Delete Favourite Recipe</string>


</resources>