<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0F6668"
    tools:context=".StartActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:gravity="center"
        android:text="@string/textViewCook"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent" />


    <SearchView
        android:id="@+id/searchViewStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:background="@drawable/circle_button"
        android:iconifiedByDefault="false"
        android:queryHint="@string/searchBar"
        android:textSize="25sp">

    </SearchView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="160sp">
        <Button
            android:id="@+id/buttonBreakfast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/btn_bg"
            android:layout_weight="1"
            android:layout_marginEnd="5sp"
            android:text="@string/breakfast"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonLunch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginEnd="5sp"
            android:text="@string/lunch"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/buttonDinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/dinner"
            android:textColor="@color/black"
            android:textSize="20sp"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:background="@color/teal_700"
        android:layout_marginTop="235sp" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_marginTop="285sp"
        android:fillViewport="true"
        android:isScrollContainer="true"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarSize="1sp"
        android:scrollbarStyle="outsideOverlay">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonItalian"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/italian"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSalad"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/salad"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonSoup"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/soup"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonIndian"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/indian"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonThai"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/thai"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonChinese"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="20sp"
                android:background="@drawable/btn_bg1"
                android:text="@string/chinese"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="375sp"
        android:weightSum="2"
        android:background="@color/teal_700"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/favouriteRecipe"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonMore"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@color/teal_700"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/seeMore" />

    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="422sp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal_700"
        android:layout_marginTop="625sp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/buttonHome"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@color/black"
            app:srcCompat="@drawable/home_button"
            android:contentDescription="@string/home_button" />

        <ImageButton
            android:id="@+id/buttonFavourite"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@color/black"
            app:srcCompat="@drawable/favourite_button"
            android:contentDescription="@string/favourite_button" />

        <ImageButton
            android:id="@+id/buttonProfile"
            android:layout_width="match_parent"
            android:layout_height="40sp"
            android:layout_weight="1"
            android:background="@color/black"
            app:srcCompat="@drawable/profile_button"
            android:contentDescription="@string/profile_button" />

    </LinearLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="53sp"
        android:layout_marginBottom="45dp"
        android:layout_marginStart="340sp"
        android:layout_alignParentBottom="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/add"
        android:contentDescription="@string/add_button"/>




</RelativeLayout>