<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="16sp"
    android:orientation="vertical"
    tools:context=".DetailActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="300sp"
        android:layout_marginBottom="10sp"
        app:cardBackgroundColor="#1F9497"
        app:cardCornerRadius="30dp">

    <androidx.cardview.widget.CardView
        android:layout_width="180dp"
        android:layout_height="180sp"
        app:cardCornerRadius="250sp"
        android:layout_marginEnd="@dimen/default_gap"
        android:layout_marginBottom="20sp"
        android:layout_gravity="bottom|end">

        <ImageView
            android:id="@+id/imageViewRecipe"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/recipe_image"
            android:scaleType="fitXY" />

    </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_recipe_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:textColor="#0B0808"
                    android:selectAllOnFocus="true"
                    android:textSize="28sp" />

                <ImageButton
                    android:id="@+id/iconFavourite"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10sp"
                    android:layout_weight="1"
                    android:contentDescription="@string/favourite_button"
                    android:background="#1F9497"
                    app:srcCompat="@drawable/favourite_button" />

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:layout_marginStart="15sp"
                android:layout_marginEnd="10sp"
                android:background="#808080" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15sp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iconServing"
                    android:layout_width="0sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_button"
                    app:srcCompat="@drawable/profile_button" />

                <TextView
                    android:id="@+id/tvServing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="200sp"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/iconTime"
                    android:layout_width="0sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:contentDescription="@string/cooking_time"
                    app:srcCompat="@drawable/time_icon" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="215sp"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10sp"
                android:layout_weight="2">

                <ImageView
                    android:id="@+id/iconCalories"
                    android:layout_width="0sp"
                    android:layout_height="30sp"
                    android:layout_marginTop="15sp"
                    android:textColor="@color/white"
                    android:layout_weight="1"
                    android:contentDescription="@string/calories"
                    app:srcCompat="@drawable/calories" />

                <TextView
                    android:id="@+id/tvCalories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="170sp"
                    android:layout_marginTop="15sp"
                    android:fontFamily="sans-serif"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginBottom="5sp"
                android:textStyle="bold"
                android:background="#4FD5C7"
                android:textColor= "@color/black"
                android:text="@string/ingredients"/>

            <TextView
                android:id="@+id/tv_Ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#C2EDE9"
                android:textColor="#050000"
                android:layout_marginBottom="10sp"
                android:textSize="25sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:textStyle="bold"
                android:background="#4FD5C7"
                android:textColor="@color/black"
                android:text="@string/instructions"/>

            <TextView
                android:id="@+id/tv_Instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#050000"
                android:background="#C2EDE9"
                android:textSize="25sp" />

        </LinearLayout>



    </ScrollView>


    </LinearLayout>




